<resources>
    <string name="app_name">Fit At Home</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_exercise_details">ExerciseDetails</string>
    <string name="test">Testing the Application</string>
    <string name="title_activity_edit_exercise_details">EditExerciseDetails</string>
    <string name="lbl_name">Name: </string>
    <string name="lbl_targetArea">Target Area: </string>
    <string name="lbl_Sets">Sets: </string>
    <string name="lbl_Reps">Reps: </string>
    <string name="lbl_Weight">Weight: </string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="dark">Dark</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="title_activity_add_exercise">AddExercise</string>
    <string name="action_main">List</string>
</resources>
