<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddExercise"
    android:orientation="vertical"
    tools:showIn="@layout/activity_add_exercise">

    <LinearLayout
        android:id="@+id/lay_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/lbl_name"
            android:text="@string/lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_targetArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_name"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbl_targetArea"
            android:text="@string/lbl_targetArea"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/add_targetArea"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_targetArea"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbl_sets"
            android:text="@string/lbl_Sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/add_sets"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="30sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_sets"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbl_reps"
            android:text="@string/lbl_Reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/add_reps"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_reps"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbl_weight"
            android:text="@string/lbl_Weight"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/add_weight"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:textSize="30sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Save"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="25dp"
        android:drawableLeft="@drawable/save"
        android:gravity="left|center_vertical"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>